# Glassure

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  Glassure.py  LICENSE  MANIFEST.in  README.md  changelog.md  changelog.rst  glassure.py  pyproject.toml  scattering_factors.py  setup.cfg  setup.py
.github/workflows/: CD.yml  CI.yml
Controller/: MainController.py
Models/: DensityOpimizitation.py  DensityOptimization.py  GlassCalculations.py  GlassureCalculator.py  GlassureModel.py  ScatteringFactors.py  Spectrum.py  scattering_factors.py
Models/data/: atomic_weights.csv  param_incoherent_scattering_intensities.csv
Tests/: __init__.py  functional_test.py  test.py  test_CompositionGroupBox.py  test_Functional.py  test_GlassCalculations.py  test_GlassureCalculator.py  test_InterpolationWidget.py  test_MainWidget.py  test_ScatteringFactors.py  test_Spectrum.py
Tests/TestData/: Mg2SiO4_085.xy  Mg2SiO4_091.xy  Mg2SiO4_120.xy  Mg2SiO4_120_bkg.xy  Mg2SiO4_175.xy  Mg2SiO4_177.xy  Mg2SiO4_ambient_bkg.xy
Views/: ControlWidget.py  ExpandableBox.py  MainWidget.py  OldMainWidget.py  SpectrumWidget.py
Views/ControlWidgets/: CompositionWidget.py  DataWidget.py  DensityOptimizationWidget.py  DiamondWidget.py  InterpolationWidget.py  OptimizationWidget.py  OptionsWidget.py  __init__.py
Views/CustomWidgets/: ExpandableBox.py
Views/UiFiles/: Main.ui  MainUI.py
data/: param_atomic_scattering_factors.csv
docs/: api.ipynb  api.md  conf.py  index.rst  installation.md  introduction.md  theory.md
docs/apidoc/: glassure.calc.rst  glassure.configuration.rst  glassure.core.calc.rst  glassure.core.calc_eggert.rst  glassure.core.fitting.rst  glassure.core.optimization.rst  glassure.core.pattern.rst  glassure.core.rst  glassure.core.scattering_factors.rst  glassure.core.soller_correction.rst  glassure.core.transfer_function.rst  glassure.core.utility.rst  glassure.fitting.rst  glassure.methods.rst  glassure.optimization.rst  glassure.pattern.rst  glassure.rst  glassure.scattering_factors.rst  glassure.soller_correction.rst  glassure.transfer_function.rst  glassure.transform.rst  glassure.utility.rst
docs/notebooks/: Effect_of_Q_min_to_gr_and_S_Q.ipynb  Effect_of_extrapolation_and_optimization.ipynb  index.rst
glassure/: Glassure.py  __init__.py  glassure.py  pattern.py  run.py  scattering_factors.py  transfer_function.py  utility.py
glassure/controller/: MainController.py
glassure/core/: __init__.py  _version.py  calc.py  calc_eggert.py  calculator.py  configuration.py  fitting.py  methods.py  normalization.py  optimization.py  pattern.py  scattering_factors.py  soller_correction.py  spectrum.py  transfer_function.py  transform.py  utility.py
glassure/data/: atomic_weights.csv
glassure/gui/: qt.py
glassure/model/: DensityOptimization.py  GlassureUtility.py  ScatteringFactors.py
glassure/notebooks/: Effect of Q_min to g(r) and S(Q).ipynb  Effect on extrapolation and optimization.ipynb  __init__.py
glassure/tests/: test_CompositionGroupBox.py  test_ConfigurationController.py  test_Functional.py  test_GlassureCalculator.py  test_GlassureModel.py  test_InterpolationWidget.py  test_ScatteringFactors.py  test_Spectrum.py  test_calc.py  test_calc_eggert.py  test_calculator.py  test_configuration_widget.py  test_fitting.py  test_functional.py  test_gui_model.py  test_optimization.py  test_pattern.py  test_scattering_factors.py  test_soller_correction.py  test_spectrum.py  test_transfer_function.py  test_utility.py  utility.py
glassure/widgets/: ControlWidget.py
tests/: __init__.py  test_calc.py  test_configuration.py  test_fitting.py  test_normalization.py  test_optimization.py  test_pattern.py  test_scattering_factors.py  test_soller_correction.py  test_transfer_function.py  test_transform.py  test_utility.py
tests/core_tests/: calc_backup.py  test_calc.py  test_calc_eggert.py  test_calculator.py  test_configuration.py  test_fitting.py  test_normalization.py  test_optimization.py  test_pattern.py  test_scattering_factors.py  test_soller_correction.py  test_transfer_function.py  test_transform.py  test_utility.py
tests/data/: Fe81S19.chi  Mg2SiO4_ambient.xy  glass_rod_SS.xy  glass_rod_WOS.xy
tests/gui_tests/: conftest.py  test_composition.py  test_configuration.py  test_configuration_controller.py  test_density_optimization.py  test_extrapolation.py  utility.py  (+6 more)
(+103 files in other folders)
