[tool.poetry]
name = "glassure"
version = "1.1.0.post5.dev0+5584c56"
description = "API and GUI for analysis of X-ray total scattering data"
authors = ["Clemens Prescher <clemens.prescher@gmail.com>"]
license = "MIT"
readme = "README.md"

classifiers = [
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Scientific/Engineering :: Information Analysis',

]

include = [
    'glassure/core/data/param_atomic_scattering_factors.csv',
    'glassure/core/data/param_incoherent_scattering_intensities.csv',
    'glassure/core/data/atomic_weights.csv',
    'glassure/gui/widgets/DioptasStyle.qss'
]

[tool.poetry.scripts]
glassure = 'glassure.run:main'

[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"

[tool.poetry-dynamic-versioning.substitution]
files = ["glassure/__init__.py"]


[tool.poetry.dependencies]
python = "^3.8, <3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"
lmfit = "^1.2.0"
pandas = "^2.0.0"
pyqtgraph = "^0.13.3"
pyqt6 = "^6.5.0"
qtpy = "^2.3.1"

[tool.poetry.group.dev.dependencies]
mock = "^5.0.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = ["poetry.core.masonry.api", "poetry_dynamic_versioning.backend"]
