[tool.poetry]
name = "glassure"
version = "1.4.2"
description = "API and GUI for analysis of X-ray total scattering data"
authors = ["Clemens Prescher <clemens.prescher@gmail.com>"]
license = "MIT"
readme = "README.md"

classifiers = [
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Scientific/Engineering :: Information Analysis',
]

[tool.poetry.scripts]
glassure = 'glassure.run:main'

[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"

[tool.poetry-dynamic-versioning.substitution]
files = ["glassure/__init__.py"]


[tool.poetry.dependencies]
python = "^3.9, <3.12"
numpy = "^1.25.2"
scipy = "^1.11.2"
lmfit = "^1.2.0"
pandas = "^2.1.0"
pyqtgraph = "^0.13.3"
qtpy = "^2.4.1"
pyside6 = "^6.5.1"

[tool.poetry.group.dev.dependencies]
mock = "^5.0.1"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-qt = "^4.2.0"
sphinx = "^7.2.5"
myst-parser = "^2.0.0"
nbsphinx = "^0.9.3"
jupyter = "^1.0.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
sphinx-rtd-theme = "^1.3.0"


[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = ["poetry.core.masonry.api", "poetry_dynamic_versioning.backend"]
